<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Reports_Fragment">

    <LinearLayout
        android:id="@+id/reporter_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reporter_fragment_layout_height"
        android:background="@color/white_color"
        android:orientation="horizontal"
        android:weightSum="4">


        <TextView
            android:id="@+id/txt_month"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_month"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_color" />

        <TextView
            android:id="@+id/txt_publish"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_publiesh_hindi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_color" />


        <TextView
            android:id="@+id/txt_upload"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_upload_hindi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_color" />


        <TextView
            android:id="@+id/txt_percent"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_percentage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_color" />


    </LinearLayout>

</LinearLayout>
