<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_txt_color"
    android:orientation="vertical"
    tools:context=".fragments.Reports_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/reporter_fragment_layout_height"
        android:background="#636363"
        android:orientation="horizontal"
        android:weightSum="4">


        <TextView
            android:id="@+id/txt_month"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_month"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white_color" />

        <TextView
            android:id="@+id/txt_publish"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_publiesh_hindi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white_color" />


        <TextView
            android:id="@+id/txt_upload"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_upload_hindi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white_color" />


        <TextView
            android:id="@+id/txt_percent"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_percentage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white_color" />


    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/txt_no_record_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/txt_no_record_found"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white_color"
        android:visibility="visible" />
</LinearLayout>
