<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/img_heading_mic"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout_add_stroys">

                        <EditText
                            android:id="@+id/et_heading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dip"
                            android:background="@null"
                            android:hint="@string/heading_txt"
                            android:inputType="text|textCapWords|textMultiLine"
                            android:maxLength="140"
                            android:paddingBottom="10dip"
                            android:paddingTop="10dip"
                            android:minLines="3"
                            android:drawableRight="@drawable/mic"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/img_heading_mic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="25dip"
                        android:background="@drawable/mic"
                        android:padding="5dip"
                        android:paddingBottom="10dip"
                        android:visibility="gone"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="40dip"
                    android:background="@color/gray_view_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/txt_limit_140"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="10dip" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="25dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_subheading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/img_sub_heading_mic"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout_add_stroys">

                        <EditText
                            android:id="@+id/et_sub_heading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="top"
                            android:hint="@string/sub_heading_txt"
                            android:inputType="text|textCapWords|textMultiLine"
                            android:maxLength="280"
                            android:paddingBottom="10dip"
                            android:paddingTop="10dip"
                            android:minLines="3"
                            android:drawableRight="@drawable/mic"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/img_sub_heading_mic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="25dip"
                        android:background="@drawable/mic"
                        android:padding="5dip"
                        android:paddingBottom="10dip"
                        android:visibility="gone"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="80dip"
                    android:background="@color/gray_view_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/txt_limit_280"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="10dip" />


            </LinearLayout>
        </FrameLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/submit_selector"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>